# pyPDAF

./: .gitignore  .gitmodules  API.html  Makefile  README.md  UserFunc.html  environment.yml  genindex.html  index.html  linux_gfortran_openmpi.h  meson.build  meson.options  pdaf_exports.def  py-modindex.html  pyproject.toml  run.sh  search.html  setup.cfg  setup.py  setup_condaIntelMac.cfg  setup_intel.cfg  setup_mac.cfg  setup_win.cfg
.github/workflows/: condaBuildMac.yaml  conda_build_linux.yaml  conda_build_mac_intel.yaml  conda_build_mac_m1.yaml  conda_build_win.yaml  test.yaml  test_build.yaml  test_conda_build_linux.yaml  test_conda_build_mac_intel.yaml  test_conda_build_mac_m1.yaml  test_linux_build.yaml  test_mac_build.yaml  test_win_build.yaml
PDAFBuild/: CMakeLists.txt  FindMPI.cmake  Makefile  linux_gfortran_openmpi.cmake  linux_gfortran_openmpi_conda.cmake  linux_gfortran_openmpi_pypdaf.cmake  osx_gfortran_openmpi_conda.cmake  osx_gfortran_openmpi_pypdaf.cmake  setup_conda_linux.cfg  setup_conda_m1_mac.cfg  setup_conda_win.cfg  setup_mac.cfg  setup_win.cfg  win_intel_msmpi.cmake  win_intel_msmpi_pypdaf.cmake
_sources/: API.rst.txt  PDAF.rst.txt  PDAFomi.rst.txt  UserFunc.rst.txt
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
docs/: .buildinfo  API.html  API_legacy.html  Manual.html  PDAF.html  PDAFomi.html  UserFunc.html  benchmarks.html  develop.html  genindex.html  hidden_functions.html  implementation.html  index.html  install.html  introduction.html  links.html  naming_convention.html  objects.inv  parallel.html  py-modindex.html  search.html  searchindex.js  universal_interface.html  user_functions.html  workflow.html
docs/PDAF/: PDAFomi.html
docs/UserFunc/: index.html
docs/_autosummary/: pyPDAF.PDAF.SampleEns.html  pyPDAF.PDAF.abort.html  pyPDAF.PDAF.add_increment.html  pyPDAF.PDAF.assimilate_3dvar.html  pyPDAF.PDAF.assimilate_en3dvar_estkf.html  pyPDAF.PDAF.assimilate_en3dvar_lestkf.html  pyPDAF.PDAF.assimilate_enkf.html  pyPDAF.PDAF.assimilate_estkf.html  pyPDAF.PDAF.assimilate_etkf.html  pyPDAF.PDAF.assimilate_hyb3dvar_estkf.html  pyPDAF.PDAF.assimilate_hyb3dvar_lestkf.html  pyPDAF.PDAF.assimilate_lenkf.html  pyPDAF.PDAF.assimilate_lestkf.html  pyPDAF.PDAF.assimilate_letkf.html  pyPDAF.PDAF.assimilate_lknetf.html  pyPDAF.PDAF.assimilate_lnetf.html  pyPDAF.PDAF.assimilate_lseik.html  pyPDAF.PDAF.assimilate_netf.html  pyPDAF.PDAF.assimilate_pf.html  pyPDAF.PDAF.assimilate_prepost.html  pyPDAF.PDAF.assimilate_seek.html  pyPDAF.PDAF.assimilate_seik.html  pyPDAF.PDAF.configinfo_filters.html  pyPDAF.PDAF.correlation_function.html  pyPDAF.PDAF.deallocate.html  pyPDAF.PDAF.diag_CRPS.html  pyPDAF.PDAF.diag_CRPS_nompi.html  pyPDAF.PDAF.diag_compute_moments.html  pyPDAF.PDAF.diag_crps.html  pyPDAF.PDAF.diag_crps_mpi.html  pyPDAF.PDAF.diag_diffstats.html  pyPDAF.PDAF.diag_effsample.html  (+360 more)
doctrees/: API.doctree  API_legacy.doctree  Manual.doctree  PDAF.doctree  PDAFomi.doctree  UserFunc.doctree  benchmarks.doctree  develop.doctree  environment.pickle  hidden_functions.doctree  implementation.doctree  index.doctree  install.doctree  introduction.doctree  links.doctree  naming_convention.doctree  parallel.doctree  universal_interface.doctree  user_functions.doctree  workflow.doctree
example/: DAS.py  Localization.py  Model.py  OBS.py  PDAF_caller.py  PDAF_system.py  U_PDAF.py  U_PDAFomi.py  collector.py  config.py  config_mac.py  config_obsA.py  config_obsA_mac.py  config_obsA_win.py  config_obsB.py  config_win.py  distributor.py  localisation.py  log.py  main.py  model.py  model_integrator.py  obsA.py  obsB.py  obs_factory.py  parallelisation.py  parallelization.py  prepost_processing.py  state_vector.py  tutorial1_serial.ipynb
example2D/: DAS.py  Inflation.py  Localization.py  OBS.py  PDAF_caller.py  U_PDAF.py  main.py  parallelization.py
example_offline/: PDAF_system.py  collector.py  config.py  config_obsA.py  config_obsB.py  distributor.py  filter_options.py  main.py  model.py  obsA.py  obs_factory.py  parallelisation.py  prepost_processing.py  state_vector.py
html/: .buildinfo  PDAF.html  introduction.html
model/: L96.py  __init__.py  shift.py
offline2D/: AssimilationDimensions.py  FilterOptions.py  Model.py  OBS.py  OBS_A.py  OBS_B.py  PDAF_caller.py  U_PDAF.py  main.py
online2D/: Localization.py  Model.py  OBS_A.py  OBS_B.py  PDAF_caller.py  U_PDAF.py  U_PDAFomi.py  main.py
pyPDAF/: PDAF.pxd  PDAF.pyx  README.md  UserFunc.pxd  UserFunc.pyx  Userfunc.pxd  Userfunc.pyx  __init__.py
pyPDAF/fortran/: CMakeLists.txt  Makefile  PDAF_c_binding.F90  PDAFc.pyx  PDAFomi_obs_c_binding.F90  U_PDAF_interface_c_binding.F90  interface_pdaf.F90
src/pyPDAF/PDAF/: __init__.py  _pdaf_c.pxd  _pdaf_c.pyi  _pdaf_c.pyx  assim.pxd  assim.pyi  assim.pyx  callback.pxd  callback.pyx  diag.pxd  diag.pyi  diag.pyx  get.pxd  get.pyi  get.pyx  iau.pxd  iau.pyi  iau.pyx  iau_internal.pxd  iau_internal.pyx  internal.pxd  internal.pyi  internal.pyx  meson.build  put.pxd  put.pyx  setter.pxd  setter.pyi  setter.pyx
src/pyPDAF/PDAF3/: __init__.py  _pdaf3_c.pxd  _pdaf3_c.pyi  _pdaf3_c.pyx  assim.pxd  assim.pyi  assim.pyx  meson.build  put.pxd  put.pyx
src/pyPDAF/PDAFlocal/: __init__.py  _pdaflocal_c.pxd  _pdaflocal_c.pyi  _pdaflocal_c.pyx  assim.pxd  assim.pyx  internal.pxd  internal.pyx  meson.build  put.pxd  put.pyx
src/pyPDAF/PDAFlocalomi/: __init__.py  assim.pxd  assim.pyx  meson.build  put.pxd  put.pyx
tests/: test_example.py  test_init.py  test_init.sh
tool/: cfi_binding.pxd  check_fortran_pypdaf_bindings.py  compare_fortran_c_signatures.py  compare_subroutines.py  docstrings.py  fortran2Cython.py  get_decls.py  get_decls_cb.py  get_interface_info.py  pdaf_assimilate_docstrings.py  pdaf_c_cb.pxd  pdaflocalomi_assimilate_docstrings.py  pdafomi_put_state_docstrings.py  write_PDAF_funcs.py  write_PDAF_pyi.py  write_binding.py  write_cb_pxd.py  write_cb_pyx.py  write_docstrings.py  write_pdaf_funcs.py  write_pdaf_pxd.py  write_pdaf_pyx.py  write_pxd.py  write_user_funcs.py
tutorial/: cleanup.sh
tutorials/: tutorial1_serial.ipynb
(+16390 files in other folders)
