project('tt', 'cython', 'fortran', version: '0.1.0',
  meson_version: '>=1.1.0')

py_mod = import('python')
python = py_mod.find_installation()
dep_py = python.dependency()

ff = meson.get_compiler('fortran')

# mpi_dep = dependency('mpi', language: 'fortran')
mpi_inc = include_directories(['/home/users/ia923171/.conda/envs/devel/include'])
mpifort_lib = ff.find_library('mpifort', dirs: '/home/users/ia923171/.conda/envs/devel/lib/', required: true)
mpi_lib = ff.find_library('mpi', dirs: '/home/users/ia923171/.conda/envs/devel/lib/', required: true)
mpi_dep = declare_dependency(dependencies : [mpifort_lib, mpi_lib],
  include_directories : mpi_inc)

src_dir = meson.project_source_root()

fortran_sources = files('PDAF/src/PDAF3_assimilate_3dvars.F90',
                        'PDAF/src/PDAF3_assimilate_3dvars_nondiagR.F90',
                        'PDAF/src/PDAF3_assimilate_ens.F90',
                        'PDAF/src/PDAF3_assimilate_ens_nondiagR.F90',
                        'PDAF/src/PDAF3_assim_offline_3dvars.F90',
                        'PDAF/src/PDAF3_assim_offline_3dvars_nondiagR.F90',
                        'PDAF/src/PDAF3_assim_offline_ens.F90',
                        'PDAF/src/PDAF3_assim_offline_ens_nondiagR.F90',
                        'PDAF/src/PDAF_3dvar_analysis_cvt.F90',
                        'PDAF/src/PDAF_3dvar.F90',
                        'PDAF/src/PDAF_3dvar_optim.F90',
                        'PDAF/src/PDAF_3dvar_update.F90',
                        'PDAF/src/PDAF3_put_state_3dvars.F90',
                        'PDAF/src/PDAF3_put_state_3dvars_nondiagR.F90',
                        'PDAF/src/PDAF3_put_state_ens.F90',
                        'PDAF/src/PDAF3_put_state_ens_nondiagR.F90',
                        'PDAF/src/PDAF_analysis_utils.F90',
                        'PDAF/src/PDAF_assimilate_3dvar.F90',
                        'PDAF/src/PDAF_assimilate_en3dvar_estkf.F90',
                        'PDAF/src/PDAF_assimilate_en3dvar_lestkf.F90',
                        'PDAF/src/PDAF_assimilate_enkf.F90',
                        'PDAF/src/PDAF_assimilate_ensrf.F90',
                        'PDAF/src/PDAF_assimilate_estkf.F90',
                        'PDAF/src/PDAF_assimilate_etkf.F90',
                        'PDAF/src/PDAF_assimilate_hyb3dvar_estkf.F90',
                        'PDAF/src/PDAF_assimilate_hyb3dvar_lestkf.F90',
                        'PDAF/src/PDAF_assimilate_lenkf.F90',
                        'PDAF/src/PDAF_assimilate_lestkf.F90',
                        'PDAF/src/PDAF_assimilate_letkf.F90',
                        'PDAF/src/PDAF_assimilate_lknetf.F90',
                        'PDAF/src/PDAF_assimilate_lnetf.F90',
                        'PDAF/src/PDAF_assimilate_lseik.F90',
                        'PDAF/src/PDAF_assimilate_netf.F90',
                        'PDAF/src/PDAF_assimilate_pf.F90',
                        'PDAF/src/PDAF_assimilate_prepost.F90',
                        'PDAF/src/PDAF_assimilate_seik.F90',
                        'PDAF/src/PDAF_assim_interfaces.F90',
                        'PDAF/src/PDAF_cb_procedures.F90',
                        'PDAF/src/PDAF_comm_obs.F90',
                        'PDAF/src/PDAF_communicate_ens.F90',
                        'PDAF/src/PDAF_da.F90',
                        'PDAF/src/PDAF_diag.F90',
                        'PDAF/src/PDAF_en3dvar_analysis_cvt.F90',
                        'PDAF/src/PDAF_en3dvar_optim.F90',
                        'PDAF/src/PDAF_en3dvar_update.F90',
                        'PDAF/src/PDAF_enkf_analysis_rlm.F90',
                        'PDAF/src/PDAF_enkf_analysis_rsm.F90',
                        'PDAF/src/PDAF_enkf.F90',
                        'PDAF/src/PDAF_enkf_update.F90',
                        'PDAF/src/PDAF_ensrf_analysis.F90',
                        'PDAF/src/PDAF_ensrf.F90',
                        'PDAF/src/PDAF_ensrf_update.F90',
                        'PDAF/src/PDAF_estkf_analysis.F90',
                        'PDAF/src/PDAF_estkf_analysis_fixed.F90',
                        'PDAF/src/PDAF_estkf.F90',
                        'PDAF/src/PDAF_estkf_update.F90',
                        'PDAF/src/PDAF_etkf_analysis.F90',
                        'PDAF/src/PDAF_etkf_analysis_fixed.F90',
                        'PDAF/src/PDAF_etkf_analysis_T.F90',
                        'PDAF/src/PDAF_etkf.F90',
                        'PDAF/src/PDAF_etkf_update.F90',
                        'PDAF/src/PDAF.F90',
                        'PDAF/src/PDAF_forecast.F90',
                        'PDAF/src/PDAF_generate_obs.F90',
                        'PDAF/src/PDAF_generate_obs_update.F90',
                        'PDAF/src/PDAF_genobs.F90',
                        'PDAF/src/PDAF_get.F90',
                        'PDAF/src/PDAF_get_state.F90',
                        'PDAF/src/PDAF_hyb3dvar_analysis_cvt.F90',
                        'PDAF/src/PDAF_hyb3dvar_optim.F90',
                        'PDAF/src/PDAF_hyb3dvar_update.F90',
                        'PDAF/src/PDAF_iau.F90',
                        'PDAF/src/PDAF_info.F90',
                        'PDAF/src/PDAF_init.F90',
                        'PDAF/src/PDAF_lenkf_analysis_rsm.F90',
                        'PDAF/src/PDAF_lenkf.F90',
                        'PDAF/src/PDAF_lenkf_update.F90',
                        'PDAF/src/PDAF_lestkf_analysis.F90',
                        'PDAF/src/PDAF_lestkf_analysis_fixed.F90',
                        'PDAF/src/PDAF_lestkf.F90',
                        'PDAF/src/PDAF_lestkf_update.F90',
                        'PDAF/src/PDAF_letkf_analysis.F90',
                        'PDAF/src/PDAF_letkf_analysis_fixed.F90',
                        'PDAF/src/PDAF_letkf_analysis_T.F90',
                        'PDAF/src/PDAF_letkf.F90',
                        'PDAF/src/PDAF_letkf_update.F90',
                        'PDAF/src/PDAF_lknetf_analysis_step.F90',
                        'PDAF/src/PDAF_lknetf_analysis_sync.F90',
                        'PDAF/src/PDAF_lknetf.F90',
                        'PDAF/src/PDAF_lknetf_update_step.F90',
                        'PDAF/src/PDAF_lknetf_update_sync.F90',
                        'PDAF/src/PDAF_lnetf_analysis.F90',
                        'PDAF/src/PDAF_lnetf.F90',
                        'PDAF/src/PDAF_lnetf_update.F90',
                        'PDAF/src/PDAFlocal_assimilate_3dvars.F90',
                        'PDAF/src/PDAFlocal_assimilate_ens.F90',
                        'PDAF/src/PDAFlocal_callback.F90',
                        'PDAF/src/PDAFlocal.F90',
                        'PDAF/src/PDAFlocalomi_assimilate_3dvars.F90',
                        'PDAF/src/PDAFlocalomi_assimilate_ens.F90',
                        'PDAF/src/PDAFlocalomi_put_state_3dvars.F90',
                        'PDAF/src/PDAFlocalomi_put_state_ens.F90',
                        'PDAF/src/PDAFlocal_put_state_3dvars.F90',
                        'PDAF/src/PDAFlocal_put_state_ens.F90',
                        'PDAF/src/PDAF_lseik_analysis.F90',
                        'PDAF/src/PDAF_lseik_analysis_trans.F90',
                        'PDAF/src/PDAF_lseik.F90',
                        'PDAF/src/PDAF_lseik_update.F90',
                        'PDAF/src/PDAF_memcount.F90',
                        'PDAF/src/PDAF_mod_core.F90',
                        'PDAF/src/PDAF_mod_parallel.F90',
                        'PDAF/src/PDAF_netf_analysis.F90',
                        'PDAF/src/PDAF_netf.F90',
                        'PDAF/src/PDAF_netf_update.F90',
                        'PDAF/src/PDAFobs.F90',
                        'PDAF/src/PDAFomi_assimilate_3dvars.F90',
                        'PDAF/src/PDAFomi_assimilate_ens.F90',
                        'PDAF/src/PDAFomi_assimilate_ens_nondiagR.F90',
                        'PDAF/src/PDAFomi_callback.F90',
                        'PDAF/src/PDAFomi_dim_obs_l.F90',
                        'PDAF/src/PDAFomi.F90',
                        'PDAF/src/PDAFomi_obs_diag.F90',
                        'PDAF/src/PDAFomi_obs_f.F90',
                        'PDAF/src/PDAFomi_obs_l.F90',
                        'PDAF/src/PDAFomi_obs_op.F90',
                        'PDAF/src/PDAFomi_put_state_3dvars.F90',
                        'PDAF/src/PDAFomi_put_state_ens.F90',
                        'PDAF/src/PDAFomi_put_state_ens_nondiagR.F90',
                        'PDAF/src/PDAF_pf_analysis.F90',
                        'PDAF/src/PDAF_pf.F90',
                        'PDAF/src/PDAF_pf_update.F90',
                        'PDAF/src/PDAF_prepost.F90',
                        'PDAF/src/PDAF_put_state_3dvar.F90',
                        'PDAF/src/PDAF_put_state_en3dvar_estkf.F90',
                        'PDAF/src/PDAF_put_state_en3dvar_lestkf.F90',
                        'PDAF/src/PDAF_put_state_enkf.F90',
                        'PDAF/src/PDAF_put_state_ensrf.F90',
                        'PDAF/src/PDAF_put_state_estkf.F90',
                        'PDAF/src/PDAF_put_state_etkf.F90',
                        'PDAF/src/PDAF_put_state_generate_obs.F90',
                        'PDAF/src/PDAF_put_state_hyb3dvar_estkf.F90',
                        'PDAF/src/PDAF_put_state_hyb3dvar_lestkf.F90',
                        'PDAF/src/PDAF_put_state_lenkf.F90',
                        'PDAF/src/PDAF_put_state_lestkf.F90',
                        'PDAF/src/PDAF_put_state_letkf.F90',
                        'PDAF/src/PDAF_put_state_lknetf.F90',
                        'PDAF/src/PDAF_put_state_lnetf.F90',
                        'PDAF/src/PDAF_put_state_lseik.F90',
                        'PDAF/src/PDAF_put_state_netf.F90',
                        'PDAF/src/PDAF_put_state_pf.F90',
                        'PDAF/src/PDAF_put_state_prepost.F90',
                        'PDAF/src/PDAF_put_state_seik.F90',
                        'PDAF/src/PDAF_sample.F90',
                        'PDAF/src/PDAF_seik_analysis.F90',
                        'PDAF/src/PDAF_seik_analysis_newT.F90',
                        'PDAF/src/PDAF_seik_analysis_trans.F90',
                        'PDAF/src/PDAF_seik.F90',
                        'PDAF/src/PDAF_seik_update.F90',
                        'PDAF/src/PDAF_set.F90',
                        'PDAF/src/PDAF_smoother.F90',
                        # 'PDAF/src/PDAF_timer.F90',
                        'PDAF/src/PDAF_timer_mpi.F90',
                        'PDAF/src/PDAF_utils.F90',
                        'PDAF/src/PDAF_utils_filters.F90',
                        'PDAF/external/SANGOMA/SANGOMA_quicksort.F90',
                        'PDAF/external/CG+/cgfam.f',
                        'PDAF/external/CG+/cgsearch.f',
                        'PDAF/external/CG+_mpi/cgfam.f',
                        'PDAF/external/CG+_mpi/cgsearch.f',
                        'PDAF/external/LBFGS/lbfgsb.f',
                        'PDAF/external/LBFGS/linpack.f',
                        'PDAF/external/LBFGS/timer.f'
                        )


pdaf_args = ff.get_supported_arguments(['-O3', '-fdefault-real-8', '-DUSE_PDAF'], checked: 'warn')
pdaf_lib = static_library('pdaf-var',
  fortran_sources,
  fortran_args: pdaf_args,
  dependencies: mpi_dep,
  pic: true
)

pdafc_sources = files('src/fortran/pdaf3_c_assim.f90',
                      'src/fortran/pdaf3_c_put.f90',
                      'src/fortran/pdaf_c_assim.f90',
                      'src/fortran/pdaf_c_callback.f90',
                      'src/fortran/pdaf_c_cb_interface.f90',
                      'src/fortran/pdaf_c_diag.f90',
                      'src/fortran/pdaf_c.f90',
                      'src/fortran/pdaf_c_get.f90',
                      'src/fortran/pdaf_c_iau.f90',
                      'src/fortran/pdaf_c_iau_internal.f90',
                      'src/fortran/pdaf_c_internal.f90',
                      'src/fortran/pdaf_c_put.f90',
                      'src/fortran/pdaf_c_setter.f90',
                      'src/fortran/pdaflocal_c_assim.f90',
                      'src/fortran/pdaflocal_c.f90',
                      'src/fortran/pdaflocal_c_put.f90',
                      'src/fortran/pdaflocalomi_c_assim.f90',
                      'src/fortran/pdaflocalomi_c_put.f90',
                      'src/fortran/pdafomi_c_assim.f90',
                      'src/fortran/pdafomi_c_diag.f90',
                      'src/fortran/pdafomi_c.f90',
                      'src/fortran/pdafomi_c_internal.f90',
                      'src/fortran/pdafomi_c_legacy.f90',
                      'src/fortran/pdafomi_c_put.f90',
                      'src/fortran/pdafomi_c_setter.f90'
                      )


pdaf_c_args = ff.get_supported_arguments(['-O3', ], checked: 'warn')
f_lib = static_library('pdafc',
  pdafc_sources,
  link_with: pdaf_lib,
  fortran_args: pdaf_c_args,
  dependencies: mpi_dep,
  pic: true
)

# incdir_numpy = run_command(python,
#   ['-c', 'import os; os.chdir(".."); import numpy; print(numpy.get_include())'],
#   check : true
# ).stdout().strip()

# cython_ext = python.extension_module(
#   'mod_array',
#   'mod_array.pyx',
#   link_with: [f_lib],
#   dependencies : dep_py,
#   include_directories: include_directories(incdir_numpy),
#   fortran_args: ['-O3'],
#   cython_args : ['-Xboundscheck=False', '-Xbinding=False', '-Xwraparound=False', '-Xinitializedcheck=False'],
#   link_language: 'fortran',
#   install: true
# )

